# public-docs-llm-kit

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
configs/: indexing.example.yaml
docs/: architecture.md
scripts/: build_index.py  crawl_site.py
src/public_docs_llm/: __init__.py  cli.py  crawl.py  indexing.py  models.py  openai_support.py  retrieval.py  service.py  settings.py
src/public_docs_llm/answer/: __init__.py  citations.py
src/public_docs_llm/api/: app.py
src/public_docs_llm/parse/: __init__.py  html_to_md.py
tests/: test_api.py  test_chunking.py  test_retrieval.py
